--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><circle cx='12' cy='12' r='11' stroke='%230ea5e9' stroke-width='2' fill='white'/><path d='M12 4C12 4 14 6.5 14 9C14 11.5 12 13 12 13C12 13 10 11.5 10 9C10 6.5 12 4Z' fill='%230ea5e9'/><path d='M6 16C6 16 8 17.5 12 17.5C16 17.5 18 16 18 16' stroke='%230ea5e9' stroke-width='1.5' stroke-linecap='round'/><path d='M7 18.5C7 18.5 9 20 12 20C15 20 17 18.5 17 18.5' stroke='%230ea5e9' stroke-width='1.5' stroke-linecap='round'/><path d='M8 21C8 21 9.5 22 12 22C14.5 22 16 21 16 21' stroke='%230ea5e9' stroke-width='1.5' stroke-linecap='round'/></svg>" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 144'><path fill='%233b82f6' d='M127.5,136.8C95.8,150.1,63,134.2,50.2,106.8C32.8,69.7,51.1,26,93.5,18.3c36.5-6.7,65.9,19.2,70,52.1C167,98.3,152.7,125.1,127.5,136.8z M154.2,64.3c-0.8-2.4-1.3-4.8-2.3-7.1C138.7,26.5,99.4,14.1,71,37.3C55,50.5,47.6,73,53.4,92.5c0.9,2.9,2.6,3.7,5.2,3.1c1.6-0.4,3.1-1.1,4.7-1.7c9.5-4.1,19-4.4,28.5-0.2c5.2,2.3,10.5,3,16.1,2.3c3-0.3,5.9-1,8.6-2.2c9.5-4.3,19-4.1,28.5,0c8,3.4,8.5,3,10.4-5.5c1.8-7.8,1.1-15.5-1.2-23.9z M105.4,104.4c-5.7,0.4-11.2-0.7-16.5-3.1c-4.5-2-9.3-4.1-14.4-2.6c-5.4,1.5-10.5,3.7-15.7,5.6c0.1,2.6,1.2,4.2,2.6,5.5c17.2-4.5,17.2-4.4,34.7,1c6.4,2,12.7,1.8,19-0.9c9-3.9,18.2-5.1,27.5-1.1c4.6,2,5.9-0.2,6.7-4.1c-3-1.1-5.8-2.1-8.5-3.3c-7.1-3.3-14-3.4-21.1,0.2C115.6,103.1,111.2,104.7,105.4,104.4z M75,121.7c6.1-0.5,11.9,0.4,17.5,3c6.9,3.2,14,4.2,21.2,1c6.6-3,13.4-4.7,20.8-4.1c2.8,0.2,4.4-1.8,5.8-4.7c-6.2-3.6-12.4-3.5-18.6-1c-7.7,3.1-15.5,4.8-23.8,3.3c-4.1-0.7-8-2.4-11.9-3.7c-6.2-2-12.2-1.9-18.3,1.3C69.4,119.8,71,121.8,75,121.7z'/><path fill='%233b82f6' d='M117.8,55.2c2.9,4.8,4.8,9.4,4.5,14.9c-0.5,10.4-9.4,18.8-19.5,18C92.2,87.2,84.2,76.8,86,66.3c0.8-5,3.1-9.4,5.8-13.7c3.7-6,7.7-11.9,12-18.6C109.4,41,113.5,48,117.8,55.2z'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0ea5e9" />
     <meta
@@ -10,24 +10,6 @@
       content="Blue Horizon - Advanced Water Quality Monitoring Dashboard with AI-powered insights and real-time analytics"
     />
     <title>Blue Horizon</title>
-    
-    <!-- Tailwind CSS CDN for development -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              blue: {
-                50: '#eff6ff',
-                500: '#3b82f6',
-                600: '#2563eb',
-                700: '#1d4ed8',
-              }
-            }
-          }
-        }
-      }
     </script>
   </head>
   <body>
